src/test/ui/span/macro-ty-params.stderr
error: generic arguments in macro path
  --> $DIR/macro-ty-params.rs:10:5
   |
LL |     foo::<T>!();
   |     ^^^^^^^^

error: generic arguments in macro path
  --> $DIR/macro-ty-params.rs:11:5
   |
LL |     foo::<>!();
   |     ^^^^^^^

error: unexpected generic arguments in path
  --> $DIR/macro-ty-params.rs:12:8
   |
LL |     m!(Default<>);
   |        ^^^^^^^^^

error: generic arguments in macro path
  --> $DIR/macro-ty-params.rs:12:8
   |
LL |     m!(Default<>);
   |        ^^^^^^^^^

error: aborting due to 4 previous errors

